--- a/angular-gui/src/app/order/order-input-data/order-input-data.component.html
+++ b/angular-gui/src/app/order/order-input-data/order-input-data.component.html
@@ -1,9 +1,6 @@
-<mat-card class="order-detail-page">
+<mat-card class="details-page">
     <mat-card-content>
-        <form [formGroup]="form" class="order-detail-form">
-            <mat-form-field>
-                <input matInput type="text" placeholder="id" formControlName="id">
-            </mat-form-field>
+        <form [formGroup]="form" class="details-form">
             <mat-form-field>
                 <input matInput type="text" placeholder="name" formControlName="name">
             </mat-form-field>
