--- a/angular-gui/src/app/order/orders.component.scss
+++ b/angular-gui/src/app/order/orders.component.scss
@@ -1,8 +1,3 @@
-.order-input-page {
-    max-width: 350px;
-    margin: 50px auto 0 auto;
-  }
-  
-  .order-input-form {
-    display: flex;  flex-direction: column;
-  }
+button {
+  margin: 0.5rem;
+}
