--- a/angular-gui/src/app/order/order-details/order-details.component.html
+++ b/angular-gui/src/app/order/order-details/order-details.component.html
@@ -1,11 +1,11 @@
 <button mat-raised-button routerLink="/order" routerLinkActive="active">Back</button>
-<p>Order id: {{ order.id }}</p>
-<p>Order name: {{ order.name }}</p>
-<app-order-input-details [orderId]="order.id"></app-order-input-details>
+<p>Order id: {{ (order$| async)?.id }}</p>
+<p>Order name: {{ (order$| async)?.name }}</p>
+<p>Order status: {{ (order$| async)?.status }}</p>
+<button mat-raised-button (click)="releaseOrder()">Release</button>
+<app-order-input-details [orderId]="(order$| async)?.id"></app-order-input-details>
 <ul>
-    <li *ngFor="let orderline of orderLines$ | async;">
-        <p>Id: {{ orderline.id }}</p>
-        <p>Qty: {{ orderline.qty }}</p>
-        <p>Item: {{ orderline.item }}</p>
+    <li *ngFor="let orderLine of orderLines$ | async;">
+        <app-order-line-details [orderLine]="orderLine"></app-order-line-details>
     </li>
 </ul>
