--- a/angular-gui/src/app/order/order-details/order-details.component.html
+++ b/angular-gui/src/app/order/order-details/order-details.component.html
@@ -1,11 +1,33 @@
-<button mat-raised-button routerLink="/order" routerLinkActive="active">Back</button>
-<p>Order id: {{ (order$| async)?.id }}</p>
-<p>Order name: {{ (order$| async)?.name }}</p>
-<p>Order status: {{ (order$| async)?.status }}</p>
-<button mat-raised-button (click)="releaseOrder()">Release</button>
-<app-order-input-details [orderId]="(order$| async)?.id"></app-order-input-details>
-<ul>
-    <li *ngFor="let orderLine of orderLines$ | async;">
-        <app-order-line-details [orderLine]="orderLine"></app-order-line-details>
-    </li>
-</ul>
+<h1>Order {{ (order$| async)?.name }}</h1>
+
+<mat-sidenav-container>
+
+  <mat-sidenav mode="side" opened>
+    <div class="side-nav">
+      <button mat-raised-button routerLink="/order" routerLinkActive="active">Back</button>
+      <h3>Order details</h3>
+      <p>Order id: {{ (order$| async)?.id }}</p>
+      <p>Order name: {{ (order$| async)?.name }}</p>
+      <p>Order status: {{ (order$| async)?.status }}</p>
+      <button mat-raised-button (click)="releaseOrder()">Release</button>
+      <mat-accordion>
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title>Create order line</mat-panel-title>
+          </mat-expansion-panel-header>
+          <app-order-input-details [orderId]="(order$| async)?.id"></app-order-input-details>
+        </mat-expansion-panel>
+      </mat-accordion>
+    </div>
+
+  </mat-sidenav>
+
+  <mat-sidenav-content>
+    <mat-list>
+      <mat-list-item *ngFor="let orderLine of orderLines$ | async;">
+          <app-order-line-details [orderLine]="orderLine" (remove)="removeOrderLine($event)"></app-order-line-details>
+      </mat-list-item>
+    </mat-list>
+  </mat-sidenav-content>
+
+</mat-sidenav-container>
