--- a/angular-gui/src/app/order/order-input-data/order-input-data.component.html
+++ b/angular-gui/src/app/order/order-input-data/order-input-data.component.html
@@ -1,15 +1,12 @@
-<mat-card class="details-page">
-    <mat-card-content>
-        <form [formGroup]="form" class="details-form">
-            <mat-form-field>
-                <input matInput type="text" placeholder="name" formControlName="name">
-            </mat-form-field>
-            <button mat-raised-button
-             color="primary" 
-             (click)="createOrder()"
-             [disabled]="!form.valid">
-                Create
-            </button>
-        </form>
-    </mat-card-content>
-</mat-card>
+<form [formGroup]="form" class="details-form">
+    <mat-form-field>
+        <input matInput type="text" placeholder="name" formControlName="name">
+    </mat-form-field>
+    <span class="spacer"></span>
+    <button mat-raised-button
+      color="primary"
+      (click)="createOrder()"
+      [disabled]="!form.valid">
+        Create
+    </button>
+</form>
