--- a/angular-gui/src/styles.scss
+++ b/angular-gui/src/styles.scss
@@ -52,3 +52,10 @@ $theme: mat-light-theme($primary, $accent);
 .spacer {
   flex: 1 1 auto;
 }
+
+body {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+}
