--- a/angular-gui/src/app/order/orders.component.html
+++ b/angular-gui/src/app/order/orders.component.html
@@ -1,31 +1,34 @@
-<h1>Orders</h1>
-<mat-sidenav-container>
-  <mat-sidenav mode="side" opened>
-    <mat-accordion>
-      <mat-expansion-panel>
-        <mat-expansion-panel-header>
-          <mat-panel-title>Create order</mat-panel-title>
-        </mat-expansion-panel-header>
-        <app-order-input-data></app-order-input-data>
-      </mat-expansion-panel>
-    </mat-accordion>
-  </mat-sidenav>
-  <mat-sidenav-content>
-    <mat-list>
-      <mat-list-item *ngFor="let order of orders$ | async;">
-        <span>{{ order.name }}</span>
-        <span class="spacer"></span>
-        <button mat-raised-button
-          color="primary"
-          [routerLink]="['/order', order.id]"
-          routerLinkActive="active">
-          Details
-        </button>
-        <button mat-raised-button
-          (click)="removeOrder(order)">
-          Remove
-        </button>
-      </mat-list-item>
-      </mat-list>
-  </mat-sidenav-content>
-</mat-sidenav-container>
+<app-header-layout>
+  <h1 header>Orders</h1>
+  <mat-sidenav-container content>
+    <mat-sidenav mode="side" opened>
+      <mat-accordion>
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title>Create order</mat-panel-title>
+          </mat-expansion-panel-header>
+          <app-order-input-data></app-order-input-data>
+        </mat-expansion-panel>
+      </mat-accordion>
+    </mat-sidenav>
+    <mat-sidenav-content>
+      <mat-list>
+        <mat-list-item *ngFor="let order of orders$ | async;">
+          <span>{{ order.name }}</span>
+          <span>{{ order.status }}</span>
+          <span class="spacer"></span>
+          <button mat-raised-button
+            color="primary"
+            [routerLink]="['/order', order.id]"
+            routerLinkActive="active">
+            Details
+          </button>
+          <button mat-raised-button
+            (click)="removeOrder(order)">
+            Remove
+          </button>
+        </mat-list-item>
+        </mat-list>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+</app-header-layout>
