--- a/angular-gui/src/app/sku/sku.component.html
+++ b/angular-gui/src/app/sku/sku.component.html
@@ -14,9 +14,9 @@
     <mat-sidenav-content>
       <mat-list>
           <mat-list-item *ngFor="let sku of skus$ | async;">
-              <span>{{ sku.id }}</span>
-              <span>{{ sku.name }}</span>
-              <span>{{ sku.description }}</span>
+              <span>{{ sku.id }}&nbsp;</span>
+              <span>{{ sku.name }}&nbsp;</span>
+              <span>{{ sku.description }}&nbsp;</span>
           </mat-list-item>
         </mat-list>
     </mat-sidenav-content>
