Added picking functionalities on backed, added picking list state change function

--- a/angular-gui/src/app/location/location-details/location-details.component.html
+++ b/angular-gui/src/app/location/location-details/location-details.component.html
@@ -1,6 +1,6 @@
 <app-layout>
 
-    <h1 header>Location Details</h1>
+    <h1 header>Location {{ locationId }} Details</h1>
 
     <div sidenav class="side-nav">
         <button mat-raised-button routerLink="../" routerLinkActive="active">Back</button>
