--- a/angular-gui/src/app/picking/pick-task/pick-task.component.html
+++ b/angular-gui/src/app/picking/pick-task/pick-task.component.html
@@ -1,6 +1,6 @@
 <app-layout>
     <div header class="header">
-        <h1>Pick task {{ pickTaskId }}</h1>
+        <h1>Pick task {{ pickListId }}</h1>
         <span class="spacer"></span>
         <button mat-raised-button color="primary" routerLink="../">Back</button>
     </div>
@@ -14,7 +14,8 @@
         <ng-container matColumnDef="bt-actions">
             <th mat-header-cell *matHeaderCellDef>Actions</th>
             <td mat-cell *matCellDef="let element">
-                <button mat-raised-button color="primary" [disabled]="isDisabled(element)">
+                <button mat-raised-button color="primary" [disabled]="isDisabled(element)"
+                    (click)="changeState(element)">
                     {{ getButtonName(element) }}
                 </button>
             </td>
