added shipping module and functionality, added order number in picking, added status changes in picking and order header as well

--- a/angular-gui/src/app/app.component.html
+++ b/angular-gui/src/app/app.component.html
@@ -27,7 +27,7 @@
           <a
             *ngIf="showShipping | async"
             mat-tab-link
-            routerLink="/shipping"
+            routerLink="/shipment"
             routerLinkActive="active"
             #shipping="routerLinkActive"
             [active]="shipping.isActive"
