--- a/angular-gui/src/app/shipment/shipment.component.html
+++ b/angular-gui/src/app/shipment/shipment.component.html
@@ -1,7 +1,7 @@
 <app-with-header-layout>
   <h2 class="mat-h2" header>Shipping</h2>
 
-  <table mat-table content [dataSource]="shipplings$ | async">
+  <table mat-table content [dataSource]="shipments$ | async">
     <app-simple-schema-column
       *ngFor="let column of columnSchema"
       [column]="column"
@@ -10,7 +10,7 @@
     <ng-container matColumnDef="bt-actions">
       <th mat-header-cell *matHeaderCellDef>Actions</th>
       <td mat-cell *matCellDef="let shipping">
-        <button mat-raised-button color="primary" (click)="ship(shipping)">
+        <button mat-raised-button color="primary" (click)="ship(shipping)" [disabled]="shipping.status==='SHIPPED'">
           Ship
         </button>
       </td>
